@@ -12,7 +12,7 @@ class views_handler_field_profile_list extends views_handler_field_prerender_lis
     $this->items[$field] = array();
     foreach (split("[\n\r]", $field) as $item) {
       if ($item != '' && $item !== NULL) {
-        $this->items[$field]['item']] = $item;
+        $this->items[$field]['item'] = $item;
       }
     }
   }
